--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {},
   "private": true,
   "devDependencies": {
+    "@apollo/server": "^4.10.0",
+    "@apollo/subgraph": "^2.7.1",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
     "@nx/eslint": "17.3.0",
@@ -25,8 +27,10 @@
     "@types/node": "~18.16.9",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
+    "class-transformer": "^0.5.1",
     "eslint": "~8.48.0",
     "eslint-config-prettier": "^9.0.0",
+    "graphql-tools": "^9.0.0",
     "jest": "^29.4.1",
     "jest-environment-node": "^29.4.1",
     "nx": "17.3.0",
@@ -38,10 +42,14 @@
     "url-loader": "^4.1.1"
   },
   "dependencies": {
+    "@apollo/gateway": "^2.7.1",
+    "@nestjs/apollo": "^12.0.11",
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
+    "@nestjs/graphql": "^12.0.11",
     "@nestjs/platform-express": "^10.0.2",
-    "reflect-metadata": "^0.1.13",
+    "@nestjs/platform-ws": "^10.3.1",
+    "graphql": "^16.8.1",
     "rxjs": "^7.8.0",
     "tslib": "^2.3.0"
   }
