--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/graphql": "^12.0.11",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/platform-ws": "^10.3.1",
     "graphql": "^16.8.1",
